заменил неиспользуемые конфиги на последние версии

--- a/config/polybar/config
+++ b/config/polybar/config
@@ -1,246 +1,5 @@
-; vim:ft=cfg
-
-[colors]
-bg = ${xrdb:background:#dfdfdf}
-fg = ${xrdb:foreground:#dfdfdf}
-bg-alt = ${xrdb:foreground:#dfdfdf}
-fg-alt = ${xrdb:background:#dfdfdf}
-primary = ${xrdb:color3:#dfdfdf}
-secondary = ${xrdb:color2:#dfdfdf}
-alert = ${xrdb:color1:#dfdfdf}
-
-[bar/i3bar]
-monitor = ${env:MONITOR:eDP-1}
-locale = ru_RU.UTF-8
-
-dpi = 200
-width = 100%
-height = 35
-fixed-center = true
-bottom = false
-
-border-left-size    = 10
-border-right-size   = 10
-border-bottom-size  = 6
-border-top-size     = 6
-
-border-top-color    = ${colors.bg}
-border-bottom-color = ${colors.bg}
-border-left-color   = ${colors.bg}
-border-right-color  = ${colors.bg}
-background          = ${colors.bg}
-foreground          = ${colors.fg}
-
-module-margin-left = 0
-module-margin-right = 2
-
-font-0 = Noto Sans Mono:size=8;3
-font-1 = TerminessTTF Nerd Font Mono:pixelsize=17;8
-
-modules-left = i3
-modules-center = xwindow
-modules-right = pulseaudio battery xkeyboard wlan eth bluetooth date
-
-tray-position = right
-tray-spacing = 2
-tray-padding = 4
-tray-maxsize = 35
-tray-background = ${colors.bg}
-
-cursor-click = pointer
-cursor-scroll = ns-resize
-
-
-[module/xwindow]
-type = internal/xwindow
-label = %title:0:50:...%
-
-[module/xkeyboard]
-type = internal/xkeyboard
-blacklist-0 = num lock
-
-format = <label-layout><label-indicator>
-format-prefix = " "
-format-prefix-foreground = ${colors.secondary}
-label-layout = %icon%
-layout-icon-0 = us;EN
-layout-icon-1 = ru;RU
-label-indicator-on-capslock = " CAPS"
-label-indicator-on-capslock-foreground = ${colors.primary}
-
-[module/i3]
-type = internal/i3
-format = <label-state> <label-mode>
-index-sort = true
-wrapping-scroll = false
-strip-wsnumbers = true
-
-label-mode = %mode%
-label-mode-padding = 1
-label-mode-foreground = ${colors.alert}
-
-label-focused = %icon%
-label-focused-foreground = ${colors.primary}
-label-focused-padding = 1
-label-unfocused = %icon%
-label-unfocused-padding = 1
-label-unfocused-foreground = ${colors.secondary}
-label-visible = %icon%
-label-visible-padding = 1
-label-urgent = %icon%
-label-urgent-foreground = ${colors.alert}
-label-urgent-padding = 1
-
-ws-icon-0 = 1;
-ws-icon-1 = 2;
-ws-icon-2 = 3;
-ws-icon-3 = 4;
-ws-icon-4 = 5;
-ws-icon-5 = 6;
-ws-icon-6 = 7;ﱘ
-ws-icon-7 = 8;
-ws-icon-8 = 9;
-ws-icon-9 = 10;
-
-[module/bluetooth]
-type = custom/script
-exec = ~/.config/polybar/scripts/bluetooth-status
-interval = 1.0
-
-format-prefix = " "
-format-prefix-foreground = ${colors.secondary}
-
-click-left = /usr/bin/bluetoothctl disconnect
-
-[module/updates]
-type = custom/script
-exec = ~/.config/polybar/scripts/pacman-updates
-interval = 1200
-
-format-prefix = " "
-format-prefix-foreground = ${colors.secondary}
-
-[module/openvpn]
-type = custom/script
-exec = ~/.config/polybar/scripts/openvpn-running
-interval = 1.0
-
-label-foreground = ${colors.primary}
-
-[module/wlan]
-type = internal/network
-interface = wlp58s0
-interval = 1.0
-
-format-connected-prefix = "直 "
-format-connected-prefix-foreground = ${colors.secondary}
-label-connected = "%essid:0:15%"
-
-format-disconnected =
-
-click-left = /usr/bin/nm-connection-editor
-
-[module/eth]
-type = internal/network
-interface = enp0s20f0u2
-interval = 1.0
-
-format-connected-prefix = " "
-format-connected-prefix-foreground = ${colors.secondary}
-format-connected-prefix-padding = 1
-label-connected = "%local_ip% / %linkspeed%"
-
-format-disconnected =
-
-[module/date]
-type = internal/date
-interval = 1
-
-time = "%H:%M "
-time-alt = "%H:%M "
-date =
-date-alt = "%a, %d.%m.%y "
-label = %date%%time%
-
-format-prefix = " "
-format-prefix-foreground = ${colors.secondary}
-
-[module/pulseaudio]
-type = internal/pulseaudio
-
-format-volume-prefix = "墳 "
-format-volume-prefix-foreground = ${colors.secondary}
-format-volume = <label-volume>
-
-label-volume = "%percentage%"
-
-label-muted = "MUT"
-format-muted = <label-muted>
-format-muted-prefix = "ﱝ "
-format-muted-prefix-foreground = ${colors.primary}
-
-[module/battery]
-type = internal/battery
-battery = BAT0
-adapter = AC
-full-at = 98
-
-format-charging = <animation-charging><label-charging>
-label-charging = %percentage%
-
-animation-charging-0 = " "
-animation-charging-1 = " "
-animation-charging-2 = " "
-animation-charging-3 = " "
-animation-charging-framerate = 1000
-animation-charging-foreground = ${colors.secondary}
-
-format-discharging = <ramp-capacity><label-discharging>
-label-discharging = %percentage%
-ramp-capacity-0 = " "
-ramp-capacity-1 = " "
-ramp-capacity-2 = " "
-ramp-capacity-3 = " "
-ramp-capacity-4 = " "
-ramp-capacity-foreground = ${colors.primary}
-
-format-full-prefix = " "
-format-full-prefix-foreground = ${colors.secondary}
-label-full = 100
-
-[module/cpu]
-type = internal/cpu
-interval = 5
-
-format = <label>
-format-prefix = " "
-format-prefix-foreground = ${colors.secondary}
-
-label = %percentage:0:3%
-
-[module/memory]
-type = internal/memory
-interval = 5
-
-format = <label>
-format-prefix = " "
-format-prefix-foreground = ${colors.secondary}
-
-label = %percentage_used:0:3%
-
-[module/backlight]
-type = internal/backlight
-card = intel_backlight
-
-format = <ramp><label>
-label = %percentage%
-
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-3 = 
-ramp-foreground = ${colors.secondary}
-
+[global]
+include-file = bars/i3
 
 [settings]
 screenchange-reload = true
@@ -248,3 +7,5 @@ screenchange-reload = true
 [global/wm]
 margin-top = 5
 margin-bottom = 5
+
+; vim:ft=cfg
