--- a/config/i3/config
+++ b/config/i3/config
@@ -1,27 +1,43 @@
 # Autostart
 ## Variables
-set $wall "$HOME/.config/wall.png"
+set $conf $HOME/.config
+set $wall $conf/wall.png
+set $scripts $HOME/.local/scripts
+set $rofi $HOME/.config/rofi/bin
+set $apps /usr/share/applications
+## Default apps
+set $terminal kitty.desktop
+set $file_manager thunar.desktop
+set $browser firefox.desktop
 ## Commands
 set $start exec --no-startup-id
 set $start_always exec_always --no-startup-id
+set $systemd /usr/bin/systemctl --user
 ## Systemd session
-$start_always systemctl --user import-environment XDG_SESSION_PATH
-$start_always systemctl --user restart i3-session.target
-$start_always systemctl --user restart redshift.service
+$start_always $systemd import-environment MONITOR WLAN_INTERFACE
+$start_always $systemd restart redshift.service
+$start_always $systemd restart i3-session.target
 ## Keyboard settings
-$start setxkbmap -option grp:win_space_toggle
+$start setxkbmap -layout us,ru -option grp:win_space_toggle
 ## Xorg locking
-# $start xset s on
-# $start xset s 600
-$start xss-lock -l -- light-locker-command -l
+$start xset s on
+$start xset s 600 5
+$start $scripts/light-locker
 ## Programs
-$start picom --config "$HOME/.config/picom/picom.conf"
-$start flashfocus
+$start unclutter
+$start dex -as $conf/autostart
+$start libinput-gestures-setup start
+$start picom --config $conf/picom/picom.conf
+$start /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+$start_always autotiling
+# Default layout
+$start $scripts/i3-restore-layout
 
 # Appearance
 ## Font
 font pango:Noto Sans Mono 8
 ## Colors definition
+set               $bg1     #202020
 set_from_resource $fg      i3wm.foreground #f0f0f0
 set_from_resource $bg      i3wm.background #f0f0f0
 set_from_resource $color0  i3wm.color0     #f0f0f0
@@ -48,7 +64,7 @@ gaps inner 2
 gaps outer 2
 ## Colors
 ### Class                 border  backgr. text indicator child_border
-client.focused            $color5 $color5 $bg  $color5   $bg
+client.focused            $color5 $color5 $bg  $color5   $color8
 client.focused_inactive   $bg     $bg     $fg  $bg       $bg
 client.unfocused          $bg     $bg     $fg  $bg       $bg
 client.urgent             $color3 $color3 $bg  $color5   $color3
@@ -69,21 +85,17 @@ set $right l
 focus_on_window_activation focus
 
 # Floating windows
-for_window [window_role="pop-up"] floating enable
-for_window [window_role="task_dialog"] floating enable
-for_window [class="Wine"] floating enable, move position center
-for_window [instance="origin.exe"] floating enable
-for_window [class="megasync"] floating enable
-
 set $config_window_params floating enable, resize set 1200 px 1000 px, move position center
-set $config_window_params_sm floating enable, resize set 720 px 600 px, move position center
-for_window [class="Blueman-manager"] $config_window_params
+set $config_window_params_sm floating enable, resize set 800 px 720 px, move position center
+## floating dialog windows
+# for_window [window_role="pop-up"] floating enable, move position center
+for_window [window_role="task_dialog"] floating enable, move position center
+##
+for_window [class="Wine"] floating enable, border none, move position center
+for_window [class="MEGAsync"] floating enable, border none, move position 2390 50
 for_window [class="Pavucontrol"] $config_window_params
-for_window [class="Seahorse"] $config_window_params
-for_window [class="Nmtui"] $config_window_params_sm
+for_window [class="nmtui"] $config_window_params_sm
 
-# Scratchpad windows
-for_window [class="MEGASync"] floating enable, move position center
 # Keybindings
 
 ## Kill focused window
@@ -97,44 +109,35 @@ bindsym $mod+$shift+r restart
 floating_modifier $mod
 
 ## Power
-# bindsym $mod+$shift+e $start $HOME/bin/dmenu-powermenu
-bindsym $mod+$shift+e $start /usr/bin/xfce4-session-logout
-bindsym $mod+$shift+t $start /usr/bin/xfce4-settings-manager
+bindsym $mod+$shift+e $start sh $rofi/powermenu
 ## Launching Programs
-bindsym $mod+Return $start $TERMINAL
-bindsym --release $mod+d $start "rofi -combi-modi window,drun -show combi -modi combi"
-bindsym Ctrl+$alt+l $start /usr/bin/xflock4
-# bindsym $mod+t $start $HOME/bin/dmenu-open-settings
-bindsym $mod+q $start $FILE
-bindsym $mod+$shift+w $start $BROWSER
-## Flash active window
-bindsym $mod+n $start flash_window
+bindsym $mod+Return $start dex $apps/$terminal
+bindsym --release $mod+d $start sh $rofi/launcher
+bindsym Ctrl+$alt+l $start light-locker-command -l
+bindsym $mod+q $start dex $apps/$file_manager
+bindsym $mod+$shift+w $start dex $apps/$browser
+bindsym $mod+$shift+s $start kitty --class "nmtui" nmtui
 ## Volume control
 set $vol_increment 10
-bindsym XF86AudioMute $start /usr/bin/pamixer -t
-bindsym XF86AudioLowerVolume $start /usr/bin/pamixer -d $vol_increment
-bindsym XF86AudioRaiseVolume $start /usr/bin/pamixer -i $vol_increment
-bindsym $shift+XF86AudioLowerVolume $start /usr/bin/pamixer -d 1
-bindsym $shift+XF86AudioRaiseVolume $start /usr/bin/pamixer -i 1
+bindsym XF86AudioMute $start pamixer -t
+bindsym XF86AudioLowerVolume $start pamixer -d $vol_increment
+bindsym XF86AudioRaiseVolume $start pamixer -i $vol_increment
+bindsym $shift+XF86AudioLowerVolume $start pamixer -d 1
+bindsym $shift+XF86AudioRaiseVolume $start pamixer -i 1
 ## Music player
 set $default_player spotify
-bindsym XF86AudioPrev $start /usr/bin/playerctl --player=$default_player previous
-bindsym XF86AudioPlay $start /usr/bin/playerctl --player=$default_player play-pause
-bindsym XF86AudioNext $start /usr/bin/playerctl --player=$default_player next
+bindsym XF86AudioPrev $start playerctl --player=$default_player previous
+bindsym XF86AudioPlay $start playerctl --player=$default_player play-pause
+bindsym XF86AudioNext $start playerctl --player=$default_player next
 ## Brightness
-set $backlight_increment 10
-# bindsym XF86MonBrightnessDown $start $HOME/bin/set-backlight dec $backlight_increment
-# bindsym XF86MonBrightnessUp $start $HOME/bin/set-backlight inc $backlight_increment
-# bindsym $shift+XF86MonBrightnessDown $start $HOME/bin/set-backlight toggle
-# bindsym $shift+XF86MonBrightnessUp $start $HOME/bin/set-backlight set 100
-## Bluetooth autoconnect
-bindsym $mod+$shift+x $start /usr/bin/bluetooth-autoconnect
+bindsym XF86MonBrightnessUp   $start xbacklight -inc 10
+bindsym XF86MonBrightnessDown $start xbacklight -dec 10
 ## Screenshots
-# bindsym Print $start $HOME/bin/printscreen clipboard
-# bindsym $shift+Print $start $HOME/bin/printscreen file
+bindsym Print $start sh $rofi/screenshot clipboard
+bindsym $shift+Print $start sh $rofi/screenshot file
 
 
-# Moving around:
+# Moving around
 ## Move your focus around
 bindsym $mod+$left focus left
 bindsym $mod+$down focus down
@@ -181,66 +184,58 @@ bindsym $mod+x [urgent=latest] focus
 ## Cycle through workspaces
 bindsym $mod+Tab workspace next_on_output
 bindsym $mod+$shift+Tab workspace prev_on_output
-
+## Bluetooth autoconnect
+bindsym $mod+$shift+x $start bluetooth-autoconnect
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3"
-set $ws4 "4"
-set $ws5 "5"
-
-set $wsA "6"
-set $wsB "7"
-set $wsC "8"
-set $wsD "9"
-set $wsE "10"
+set $wsA1 "1"
+set $wsA2 "2"
+set $wsA3 "3"
+set $wsA4 "4"
+set $wsA5 "5"
+set $wsB1 "6"
+set $wsB2 "7"
+set $wsB3 "8"
+set $wsB4 "9"
+set $wsB5 "10"
 
 ## Switch to workspace
-bindsym $mod+1 workspace $ws1
-bindsym $mod+2 workspace $ws2
-bindsym $mod+3 workspace $ws3
-bindsym $mod+4 workspace $ws4
-bindsym $mod+5 workspace $ws5
+bindsym $mod+1 workspace $wsA1
+bindsym $mod+2 workspace $wsA2
+bindsym $mod+3 workspace $wsA3
+bindsym $mod+4 workspace $wsA4
+bindsym $mod+5 workspace $wsA5
 
-bindsym $alt+1 workspace $wsA
-bindsym $alt+2 workspace $wsB
-bindsym $alt+3 workspace $wsC
-bindsym $alt+4 workspace $wsD
-bindsym $alt+5 workspace $wsE
+bindsym $alt+1 workspace $wsB1
+bindsym $alt+2 workspace $wsB2
+bindsym $alt+3 workspace $wsB3
+bindsym $alt+4 workspace $wsB4
+bindsym $alt+5 workspace $wsB5
 
 ## Move focused container to workspace
-bindsym $mod+$shift+1 move container to workspace $ws1
-bindsym $mod+$shift+2 move container to workspace $ws2
-bindsym $mod+$shift+3 move container to workspace $ws3
-bindsym $mod+$shift+4 move container to workspace $ws4
-bindsym $mod+$shift+5 move container to workspace $ws5
+bindsym $mod+$shift+1 move container to workspace $wsA1
+bindsym $mod+$shift+2 move container to workspace $wsA2
+bindsym $mod+$shift+3 move container to workspace $wsA3
+bindsym $mod+$shift+4 move container to workspace $wsA4
+bindsym $mod+$shift+5 move container to workspace $wsA5
 
-bindsym $alt+$shift+1 move container to workspace $wsA
-bindsym $alt+$shift+2 move container to workspace $wsB
-bindsym $alt+$shift+3 move container to workspace $wsC
-bindsym $alt+$shift+4 move container to workspace $wsD
-bindsym $alt+$shift+5 move container to workspace $wsE
-
+bindsym $alt+$shift+1 move container to workspace $wsB1
+bindsym $alt+$shift+2 move container to workspace $wsB2
+bindsym $alt+$shift+3 move container to workspace $wsB3
+bindsym $alt+$shift+4 move container to workspace $wsB4
+bindsym $alt+$shift+5 move container to workspace $wsB5
 
 # Window specific settings
-assign [class="^discord$"] $wsA
-assign [class="^TelegramDesktop$"] $wsA
-assign [class="^Thunderbird$"] $wsA
-assign [class="^transmission-qt$"] $wsA
-assign [class="^Spotify$"] $wsB
-assign [class="^Lutris$"] $wsC
-assign [class="^Wfica$"] $wsD
-for_window [class="^discord$"] move to workspace $wsA focus
-for_window [class="^TelegramDesktop$"] move to workspace $wsA focus
-for_window [class="^Thunderbird$"] move to workspace $wsA focus
-for_window [class="^transmission-qt$"] move to workspace $wsA
-for_window [class="^Spotify$"] move to workspace $wsB focus
-for_window [class="^Wfica$"] move to workspace $wsD focus
-for_window [class="^Wfica_Splash$"] move to workspace $wsD focus
-for_window [class="^Lutris$"] move to workspace $wsC focus
-for_window [class="^Steam$"] move to workspace $wsC focus
+for_window [class="^Transmission-gtk$"] move to workspace $wsB1
+for_window [class="^discord$"]          move to workspace $wsB1 focus
+for_window [class="^TelegramDesktop$"]  move to workspace $wsB1 focus
+for_window [class="^Thunderbird$"]      move to workspace $wsB1 focus
+for_window [class="^Spotify$"]          move to workspace $wsB2 focus
+for_window [class="^Lutris$"]           move to workspace $wsB3 focus
+for_window [class="^Steam$"]            move to workspace $wsB3 focus
+for_window [class="^Wfica$"]            move to workspace $wsB4 focus
+for_window [class="^Wfica_Splash$"]     move to workspace $wsB4 focus
 
 # Resize window (you can also use the mouse for that)
 set $resize_amount 5
@@ -266,7 +261,3 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
-
-# Session autostart
-$start sh "$HOME/.config/i3/autostart.sh"
-$start bluetooth-autoconnect
